Fix header spacing title

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
     justify-content: center;
     width: 100%;
     position: fixed;
-    margin-top: 3em!important;
+    margin-top: 4em!important;
     background-color: white;
     z-index: 100;
   }
